--- a/index.pug
+++ b/index.pug
@@ -5,10 +5,12 @@ html(lang="en")
     meta(name="viewport" content="width=device-width, initial-scale=1.0")
     title Setsuna
     link(rel="stylesheet" href="style.css")
+    link(rel="preconnect" href="https://fonts.gstatic.com")
+    link(href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet")
 
   body
     div.belt
-      h1 刹那の見切り
+      h1 Samurai Slash
 
     div.contents
       div#mega.aa
@@ -28,7 +30,10 @@ html(lang="en")
         #jewel.aa.enemy
           img(src="img/jewelman.gif")
 
-      div#wow !
+        #concrete.aa.enemy
+          img(src="img/concreteman.gif")
+
+      div#wow !!!
 
     
     div#text-area
