--- a/style.scss
+++ b/style.scss
@@ -1,12 +1,11 @@
 * {
   margin: 0;
   box-sizing: border-box;
+  font-family: 'Bangers', cursive;
   body {
     height: 100vh;
-    /* background:
-    linear-gradient(120deg, rgba(255,0,0,.9), rgba(255,0,0,0) 70%),
-    linear-gradient(240deg, rgba(0,255,0,.9), rgba(0,255,0,0) 70%),
-    linear-gradient(0deg, rgba(0,0,255,.9), rgba(0,0,255,0) 70%) */
+    $bgcolor: linear-gradient(rgba(121, 76, 47, 0.8), rgba(255,0,0,0) 60%);
+    background: $bgcolor;
     big {
       font-size: 3rem;
     }
@@ -21,6 +20,7 @@
     /* color: white; */
     text-align: center;
     font-size: 10vh;
+    line-height: 20vh;
     text-shadow:
     1px 1px gold,
     2px 2px gold,
@@ -42,12 +42,10 @@
   align-items: center;
   justify-content: space-between;
   #wow {
-    background: white;
-    width: 50px;
-    height: 50px;
-    line-height: 50px;
-    border: 1px solid black;
-    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+    line-height: 100px;
+    font-size: 3rem;
     color: red;
     text-align: center;
     visibility: hidden;
@@ -57,7 +55,7 @@
     transform: translateX(-50%);
   }
   #canvas {
-    border: 1px solid black;
+    // border: 1px solid black;
     position: absolute;
     left: -80px;
     top: -50px;
@@ -69,6 +67,7 @@ $aaMargin: 20px;
 .aa {
   width: 200px;
   height: 200px;
+  transition: opacity 200ms ease;
   img {
     width: 100%;
     // height: 100%;
@@ -85,7 +84,6 @@ $aaMargin: 20px;
   right: $aaMargin;
   .enemy {
     position: absolute;
-    transition: all 200ms ease;
     visibility: hidden;
   }
   #santa {
@@ -99,6 +97,7 @@ $aaMargin: 20px;
 #text-area {
   height: 15vh;
   text-align: center;
+  letter-spacing: 2px;
 }
 
 .btn-wrapper {
