--- a/index.pug
+++ b/index.pug
@@ -21,7 +21,7 @@ html(lang="en")
       div.aa.enemy-wrapper
         canvas#canvas
         #santa.aa.enemy
-          img(src="img/santa.gif")
+          img(src="img/flowey.png")
 
         #fake.aa.enemy
           img(src="img/fakeman.gif")
@@ -34,6 +34,12 @@ html(lang="en")
 
         #concrete.aa.enemy
           img(src="img/concreteman.gif")
+
+        #meta.aa.enemy
+          img(src="img/metaknight.png")
+
+        #giygas.aa.enemy
+          img(src="img/giygas.png")
 
       div#wow !!!
 
