--- a/index.pug
+++ b/index.pug
@@ -7,6 +7,7 @@ html(lang="en")
     link(rel="stylesheet" href="style.css")
     link(rel="preconnect" href="https://fonts.gstatic.com")
     link(href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet")
+    link(rel="icon" href="img/sword.svg" type="image/svg+xml")
 
   body
     div.belt
